# ProtoBadger

image_converter/: convert.py  image.hpp  toCHeader.py
source/: CMakeLists.txt  image.hpp  main.cpp
source/headers/: ClearMenuItem.hpp  CustomBadger.hpp  ImageMenuItem.hpp  Menu.hpp  MenuItems.hpp  SettingsMenu.hpp  SubMenuItem.hpp
source/srcs/: ClearMenuItem.cpp  CustomBadger.cpp  ImageMenuItem.cpp  Menu.cpp  SettingsMenu.cpp  SubMenuItem.cpp
